<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UST Book Market</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Book Title/ Author </string>
    <string name="button_send">Search</string>
    <string name="title_activity_sell_page"></string>
    <string name="title_activity_search">UST Book Market</string>
    <string name="title">Title of the Book</string>
    <string name="auth">Author (atleast 1)</string>
    <string name="price">Price</string>
    <string name="nego">Negotiability</string>
    <string name="condi">Condition</string>
    <string name="upload">Upload Photos</string>
    <string name="sell_it">SELL IT!</string>

    <string-array name="nego_list">
        <item>Negotiable</item>
        <item>Slightly Negotiable</item>
        <item>Non-Negotiable</item>
    </string-array>
    <string-array name="condi_list">
        <item>Brand New</item>
        <item>Almost Brand New</item>
        <item>Good Condition</item>
        <item>No Torn Pages</item>
        <item>Few Torn Pages</item>
        <item>Many Torn Pages</item>
    </string-array>

    <string name="title_activity_sell_response">SellResponse</string>
    <string name="hello_world">Hello world!</string>

</resources>
